--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "style-loader": "^0.23.1",
     "vue": "^2.5.2",
     "vue-drag-verify": "^1.0.6",
+    "vue-i18n": "^8.17.4",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
